--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,7 +13,15 @@ services:
     depends_on:
       mysql:
         condition: service_healthy
-
+  migration:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    tty: true
+    env_file: .env.dev
+    depends_on:
+      mysql:
+        condition: service_healthy
   mysql:
     image: mysql:8.0.28
     platform: linux/x86_64
@@ -21,7 +29,7 @@ services:
       - 3306:3306
     environment:
       - MYSQL_ROOT_PASSWORD=password
-      - MYSQL_DATABASE=e-privado
+      - MYSQL_DATABASE=music
       - MYSQL_USER=docker
       - MYSQL_PASSWORD=password
       - TZ=Asia/Tokyo
