--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,20 +1,20 @@
-FROM --platform=linux/x86_64 golang:1.21-alpine
+FROM  golang:1.21-alpine as builder
 
 WORKDIR /app
 COPY ./go.mod ./go.sum ./
-RUN apk update && \
-    apk add --update --no-cache git && \
-    apk add --no-cache gcc && \
-    apk add --no-cache musl-dev && \
-    apk add --no-cache make && \
-    wget https://github.com/golang-migrate/migrate/releases/download/v4.15.0/migrate.linux-amd64.tar.gz && \
-    tar -zxvf migrate.linux-amd64.tar.gz && \
-    mkdir -p /usr/local/bin && \
-    mv migrate /usr/local/bin/migrate
 
 RUN go mod download
-RUN go install github.com/cosmtrek/air@v1.49.0 && \
-    go install github.com/golang/mock/mockgen@latest && \
-    go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.54.1
 
-EXPOSE 80
+COPY . .
+
+RUN CGO_ENABLED=0 go build -o main ./main.go
+
+FROM  gcr.io/distroless/base-debian10
+
+WORKDIR /app
+
+COPY --from=builder /app/main /
+
+EXPOSE 8080
+
+CMD ["/main"]
